# projectPY2_Shinkarenko_M25_555

./: .gitignore  Makefile  README.md  pyproject.toml
src/: decorators.py
src/primitive_db/: core.py  engine.py  main.py  utils.py
