[project]
name = "projectpy2-shinkarenko-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Shinkarenko",email = "kibersorder@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" },
]
